# SATX

./: .gitignore  LICENSE  pyproject.toml
satx/: __init__.py  alu.py  engine.py  formula.py  gaussian.py  gcc.py  logicgate.py  model.py  rational.py  satxengine.py  stdlib.py  unit.py
tests/: .gitignore  RegressionTests.py  SatXTestCase.py
